# BabyMIND-Analysis

./: CMakeLists.txt  README.md  setup.sh
bsd/t2krun10/: bsd_run0830115_00v01.root  bsd_run0830116_00v01.root  bsd_run0830117_00v01.root  bsd_run0830118_00v01.root  bsd_run0830119_00v01.root  bsd_run0830119_01v01.root  bsd_run0830120_00v01.root  bsd_run0830121_00v01.root  bsd_run0830122_00v01.root  bsd_run0830123_00v01.root  bsd_run0830124_00v01.root  bsd_run0830125_00v01.root  bsd_run0830125_01v01.root  bsd_run0830125_02v01.root  bsd_run0830125_03v01.root  bsd_run0830125_04v01.root  bsd_run0830125_05v01.root  bsd_run0830125_06v01.root  bsd_run0830125_07v01.root  bsd_run0830125_08v01.root  bsd_run0830126_00v01.root  bsd_run0830126_01v01.root  bsd_run0830126_02v01.root  bsd_run0830126_03v01.root  bsd_run0830126_04v01.root  bsd_run0830127_00v01.root  bsd_run0830128_00v01.root  bsd_run0830128_01v01.root  bsd_run0830128_02v01.root  bsd_run0830128_03v01.root  bsd_run0830128_04v01.root  bsd_run0830128_05v01.root  bsd_run0830128_06v01.root  bsd_run0830129_00v01.root  bsd_run0830130_00v01.root  bsd_run0830131_00v01.root  bsd_run0830132_00v01.root  bsd_run0830133_00v01.root  bsd_run0830133_01v01.root  bsd_run0830134_00v01.root  (+615 more)
data/: YASU_channelmap.txt  YASU_position.txt  bmdata.txt  nfebchannel.txt  udwagasci_xy_top.txt  udwagasci_z_side.txt  udwagasci_z_top.txt  wagasci_mapping_table_2020_0130.txt  wagasci_mapping_table_2020_0204.txt  wagasci_mapping_table_2020_0208.txt  wagasci_mapping_table_2020_0309.txt  wagasci_mapping_table_kai.txt  wagasci_mapping_table_new.csv  wgdata.txt
data/BMCalib_1204_2020/: MCR_0_Slot_0_gain.txt  MCR_0_Slot_1_gain.txt  MCR_0_Slot_2_gain.txt  MCR_0_Slot_3_gain.txt  MCR_0_Slot_4_gain.txt  MCR_0_Slot_5_gain.txt  MCR_1_Slot_0_gain.txt  MCR_1_Slot_1_gain.txt  MCR_1_Slot_2_gain.txt  MCR_1_Slot_3_gain.txt  MCR_1_Slot_4_gain.txt  MCR_1_Slot_5_gain.txt  MCR_2_Slot_0_gain.txt  MCR_2_Slot_1_gain.txt  MCR_2_Slot_2_gain.txt  MCR_2_Slot_3_gain.txt  MCR_2_Slot_4_gain.txt  MCR_2_Slot_5_gain.txt  MCR_3_Slot_0_gain.txt  MCR_3_Slot_1_gain.txt  MCR_3_Slot_2_gain.txt  MCR_3_Slot_3_gain.txt  MCR_3_Slot_4_gain.txt  MCR_3_Slot_5_gain.txt  MCR_4_Slot_0_gain.txt  MCR_4_Slot_1_gain.txt  MCR_4_Slot_2_gain.txt  MCR_4_Slot_3_gain.txt  MCR_4_Slot_4_gain.txt  MCR_5_Slot_0_gain.txt  MCR_5_Slot_1_gain.txt  MCR_5_Slot_2_gain.txt  MCR_5_Slot_3_gain.txt  MCR_5_Slot_4_gain.txt  MCR_6_Slot_0_gain.txt  MCR_6_Slot_1_gain.txt  MCR_6_Slot_2_gain.txt  MCR_6_Slot_3_gain.txt  MCR_6_Slot_4_gain.txt  MCR_6_Slot_5_gain.txt  (+6 more)
data/backup/: udwagasci_z_side.txt
decorder/: unpacking.sh
decorder/Unpacking_FW7/: root_Calibration_txt.root
include/BSDApply/: BSDApply.cpp  BSDApply.hpp
include/DataQuality/: WMDQCheck.cpp  WMDQCheck.hpp
include/DataSanity/: DataSanity.cpp  DataSanity.hpp
include/DetPerform/: babymind.cpp  babymind.hpp  chargeid.cpp  chargeid.hpp  easyrecon.cpp  easyrecon.hpp  matching.cpp  matching.hpp  protonmodule.cpp  protonmodule.hpp  tracking.cpp  tracking.hpp  wagasci.cpp  wagasci.hpp  wallmrd.cpp  wallmrd.hpp
include/EvtDisp/: .#WMData.cpp  Dimension.cpp  Dimension.hpp  EvtFormat.cpp  EvtFormat.hpp  MakeDetDisp.cpp  MakeDetDisp.hpp  MakeEachMonitor.cpp  MakeEachMonitor.hpp  MakeHitDisp.cpp  MakeHitDisp.hpp  MakeHitDisp.hpp.back  MakeMonitor.cpp  MakeMonitor.hpp  MakePMChain.cpp  MakePMChain.hpp  WGChannelMap.cpp  WGChannelMap.hpp  WGData.cpp  WGWMData.cpp  WGWMData.hpp  WMData.cpp  WMData.hpp
include/MakeCalib/: BMBasicRecon.cpp  BMBasicRecon.hpp  BMConst.hpp  BMData.cpp  BMData.hpp  DataReader.cpp  DataReader.hpp  MCData.cpp  MCData.hpp  MakePMChain.cpp  PickSignal.cpp  PickSignal.hpp  WGWMData.cpp  WGWMData.hpp  test.hpp
include/MakeEvent/: EvtFormat.cpp  EvtFormat.hpp
include/Recon/: cellautomation.cpp  cellautomation.hpp  chargeid.cpp  chargeid.hpp  mestimation.cpp  mestimation.hpp  trackmatching.cpp  trackmatching.hpp  yasutomethod.cpp  yasutomethod.hpp
include/Skelton/: skelton.cpp  skelton.hpp
include/YASUTracker/: Calibration.cpp  Calibration.hpp  Efficiency.cpp  Efficiency.hpp
lib/: CMakeLists.txt  testlib.cpp  testlib.hpp
lib/src/: BMBSD.cpp  BMBSD.hpp  BMBSDDict.cc  BMBasicRecon.cpp  BMBasicRecon.hpp  BMBasicReconDict.cc  BMBasicReconDict.cc_tmp_46098  BMBasicReconDict_rdict.pcm  BMBeaminfo.cpp  BMBeaminfo.hpp  BMBeaminfoDict.cc  BMCluster.cpp  BMCluster.hpp  BMClusterDict.cc  BMConst.hpp  BMDisp.cpp  BMDisp.hpp  BMDispDict.cc  BMDispLinkDef.hh  BMHitCluster.cpp  BMHitCluster.hpp  BMHitClusterDict.cc  BMHitClusterLinkDef.hh  BasicRecon.cpp  BasicRecon.hpp  BasicReconDict.cc  BasicReconLinkDef.hh  Cell.cpp  Cell.hpp  CellDict.cc  (+44 more)
process/: BMCalib_7Dec_2.root  BMEvt_8Nov_0.root
shell/: BMCalib.sh  BSDApply.sh  BSDApply_PM.sh  BSDApply_WG.sh  DataSanity.sh  MakeCalib.sh  MakeDisp.sh  MakeEvent.sh  MakeEvt.sh  MakePMClass.sh  MakeWGClass.sh  MakeWGWMClass.sh  MakeWMClass.sh  PMCalib.sh  TrackRecon.sh  WGDataSanity.sh  WMCoinCheck.sh  WMDataQuality.sh
src/BSDApply/: BSDApply_BM.cpp  BSDApply_PM.cpp  BSDApply_WG.cpp  BSDApply_WGnocut.cpp  CMakeLists.txt  main.cpp
src/DataQuality/: CMakeLists.txt  WMDataQuality.cpp
src/DataSanity/: CMakeLists.txt  bmdatasanity.cpp  main.cpp  wgdatasanity.cpp
src/DetPerform/: CMakeLists.txt  charge_eff.cpp  det_eventrate.cpp  detect_eff.cpp  eventrate_detail.cpp  find_neutrino.cpp  find_nuvertex.cpp  lightyield_dist.cpp  matching_eff.cpp  pedist.cpp  tracking_eff.cpp  wm_coin.cpp  wm_matchingtest.cpp
src/EvtDisp/: CMakeLists.txt  MakeDisp.cpp  MakeEachDisp.cpp  MakeEvt.cpp  MakePMClass.cpp  MakeWGClass.cpp  MakeWGWMClass.cpp  MakeWMClass.cpp
src/MakeCalib/: BMCalib.cpp  CMakeLists.txt  MCCalib.cpp  MakeCalib.cpp  PMCalib.cpp  WGCalib.cpp  main.cpp
src/MakeEvent/: CMakeLists.txt  MakeEvent.cpp  MakeMCEvent.cpp
src/Recon/: CMakeLists.txt  checkrecon.cpp  detrecon.cpp  trackrecon.cpp
src/YASUTracker/: CMakeLists.txt  basicdist.cpp  main.cpp
src/test/: CMakeLists.txt  test.cpp
trush/: EvtFormat.cpp  MakeEvt.cpp  MakeWGClass.cpp  WGCalib_old.cpp  WGData.hpp  WGWMData_old.cpp  WMData.cpp  WMData.hpp
(+2011 files in other folders)
