message(STATUS "BSDApply ... ")

AUX_SOURCE_DIRECTORY(.	SOURCE_FILES)
message(STATUS "${SOURCE_FILES}")

if    (ROOT_FOUND)

  ADD_EXECUTABLE(BSDApply_BM	BSDApply_BM.cpp)
  TARGET_LINK_LIBRARIES(BSDApply_BM	${PROJECT_SOURCE_DIR}/lib/library/BMBasicRecon.so
  					${PROJECT_SOURCE_DIR}/lib/library/BMBeaminfo.so
  					${PROJECT_SOURCE_DIR}/lib/library/BMBSD.so
					${ROOT_LIBRARIES})
  TARGET_INCLUDE_DIRECTORIES(BSDApply_BM	PUBLIC	${PROJECT_SOURCE_DIR}/include/BSDApply
  						${PROJECT_SOURCE_DIR}/lib/src)

  ADD_EXECUTABLE(BSDApply_WG	BSDApply_WG.cpp)
  TARGET_LINK_LIBRARIES(BSDApply_WG	${PROJECT_SOURCE_DIR}/lib/library/WGRecon.so
  					${PROJECT_SOURCE_DIR}/lib/library/BMBSD.so
					${ROOT_LIBRARIES})
  TARGET_INCLUDE_DIRECTORIES(BSDApply_WG	PUBLIC	${PROJECT_SOURCE_DIR}/include/BSDApply
  						${PROJECT_SOURCE_DIR}/lib/src)

  ADD_EXECUTABLE(BSDApply_WGnocut		BSDApply_WGnocut.cpp)
  TARGET_LINK_LIBRARIES(BSDApply_WGnocut	${PROJECT_SOURCE_DIR}/lib/library/WGRecon.so
  						${PROJECT_SOURCE_DIR}/lib/library/BMBSD.so
						${ROOT_LIBRARIES})
  TARGET_INCLUDE_DIRECTORIES(BSDApply_WGnocut	PUBLIC	${PROJECT_SOURCE_DIR}/include/BSDApply
  						${PROJECT_SOURCE_DIR}/lib/src)

  ADD_EXECUTABLE(BSDApply_PM	BSDApply_PM.cpp)
  TARGET_LINK_LIBRARIES(BSDApply_PM	${PROJECT_SOURCE_DIR}/lib/library/PMRecon.so
  					${PROJECT_SOURCE_DIR}/lib/library/BMBSD.so
					${ROOT_LIBRARIES})
  TARGET_INCLUDE_DIRECTORIES(BSDApply_PM	PUBLIC	${PROJECT_SOURCE_DIR}/include/BSDApply
  						${PROJECT_SOURCE_DIR}/lib/src)

endif (ROOT_FOUND)
