message(STATUS "test ... ")

AUX_SOURCE_DIRECTORY(.	SOURCE_FILES)
message(STATUS "${SOURCE_FILES}")

if    (ROOT_FOUND)

  ADD_EXECUTABLE(test	test.cpp)
  TARGET_LINK_LIBRARIES(test	testlib	${ROOT_LIBRARIES})
  TARGET_INCLUDE_DIRECTORIES(test	PUBLIC	${PROJECT_SOURCE_DIR}/include
  						${PROJECT_SOURCE_DIR}/lib)

endif (ROOT_FOUND)
